@@ -492,7 +492,7 @@ sub _render_doc
 		name => "_internal_".$doc_prefix."_delete_doc",
 		value => $self->phrase( "delete_document" ), 
 		class => "ep_form_internal_button",
-		onclick => "if( window.event ) { window.event.cancelBubble = true; } return confirm( '$msg' );",
+		onclick => "if( window.event ) { window.event.cancelBubble = true; } return confirm(".EPrints::Utils::js_string($msg).");",
 		);
 	$tool_div->appendChild( $delete_fmt_button );
 
@@ -575,7 +575,7 @@ sub _render_add_document
 	$inner_panel->appendChild( $session->make_text( " " ) );
 	$inner_panel->appendChild( $add_format_button );
 
-	my $script = $session->make_javascript( "EPJS_register_button_code( '_action_next', function() { el = \$('$ffname'); if( el.value != '' ) { return confirm( '".$self->phrase("really_next")."' ); } return true; } );" );
+	my $script = $session->make_javascript( "EPJS_register_button_code( '_action_next', function() { el = \$('$ffname'); if( el.value != '' ) { return confirm( ".EPrints::Utils::js_string($self->phrase("really_next"))." ); } return true; } );" );
 	$inner_panel->appendChild( $script);
 }
 
@@ -604,7 +604,7 @@ $panel->appendChild( $session->make_element( "div", style=>"height: 1em", class=
 	$inner_panel->appendChild( $session->make_text( " " ) );
 	$inner_panel->appendChild( $add_format_button );
 
-	my $script = $session->make_javascript( "EPJS_register_button_code( '_action_next', function() { el = \$('$ffname'); if( el.value != '' ) { return confirm( '".$self->phrase("really_next")."' ); } return true; } );" );
+	my $script = $session->make_javascript( "EPJS_register_button_code( '_action_next', function() { el = \$('$ffname'); if( el.value != '' ) { return confirm( ".EPrints::Utils::js_string($self->phrase("really_next"))." ); } return true; } );" );
 	$inner_panel->appendChild( $script);
 }
 
@@ -633,7 +633,7 @@ $panel->appendChild( $session->make_element( "div", style=>"height: 1em", class=
 	$inner_panel->appendChild( $session->make_text( " " ) );
 	$inner_panel->appendChild( $add_format_button );
 
-	my $script = $session->make_javascript( "EPJS_register_button_code( '_action_next', function() { el = \$('$ffname'); if( el.value != '' ) { return confirm( '".$self->phrase("really_next")."' ); } return true; } );" );
+	my $script = $session->make_javascript( "EPJS_register_button_code( '_action_next', function() { el = \$('$ffname'); if( el.value != '' ) { return confirm( ".EPrints::Utils::js_string($self->phrase("really_next"))." ); } return true; } );" );
 	$inner_panel->appendChild( $script);
 }
 
@@ -686,7 +686,7 @@ sub _render_add_file
 	if( $hide )
 	{
 		my $hide_add_files = $session->make_element( "div", id=>$doc_prefix."_af1" );
-		my $show = $self->{session}->make_element( "a", class=>"ep_only_js", href=>"#", onclick => "EPJS_blur(event); if(!confirm('".$self->phrase("really_add")."')) { return false; } EPJS_toggle('${doc_prefix}_af1',true);EPJS_toggle('${doc_prefix}_af2',false);return false", );
+		my $show = $self->{session}->make_element( "a", class=>"ep_only_js", href=>"#", onclick => "EPJS_blur(event); if(!confirm(".EPrints::Utils::js_string($self->phrase("really_add")).")) { return false; } EPJS_toggle('${doc_prefix}_af1',true);EPJS_toggle('${doc_prefix}_af2',false);return false", );
 		$hide_add_files->appendChild( $self->html_phrase( 
 			"add_files",
 			link=>$show ));
@@ -852,7 +852,7 @@ sub _render_filelist
 			type => "image", 
 			src => "$imagesurl/style/images/delete.png",
 			name => "_internal_".$doc_prefix."_delete_$i",
-			onclick => "EPJS_blur(event); return confirm( '".$self->phrase( "delete_file_confirm", filename => $filename )."' );",
+			onclick => "EPJS_blur(event); return confirm( ".EPrints::Utils::js_string($self->phrase( "delete_file_confirm", filename => $filename ))." );",
 			value => $self->phrase( "delete_file" ) );
 			
 		$td_delete->appendChild( $del_btn );
